--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.7.2",
+    "cors": "^2.8.5",
     "primeicons": "^7.0.0",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
